update: add some gradien text, and fix layout overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
 }
 
 @layer utilities {
+  .text-gradien {
+    @apply text-transparent bg-clip-text bg-gradient-to-r from-sky-400 to-purple-600;
+  }
   u {
     @apply text-slate-800 dark:text-slate-300 font-light;
   }
@@ -46,7 +49,7 @@
   }
 
   .card-shadow-md {
-    @apply shadow-lg shadow-slate-900/10 dark:shadow-slate-900;
+    @apply shadow-lg shadow-sky-600/10 dark:shadow-slate-900;
   }
   .toast-style {
     @apply dark:bg-dark-blue/50 backdrop-blur-sm bg-white/50 !important;
